# routes/recipes.js
@@ -50,40 +50,6 @@ router.get("/searchRecipe", async (req, res, next) => {
 
 
 
-router.post("/recipe", async (req, res, next) => {
-  
-    try {
-      let recipe_details = {
-        user_id: req.session.user_id,
-        title: req.body.title,
-        readyInMinutes: req.body.readyInMinutes,
-        image: req.body.image,
-        popularity: 0,
-        vegan: req.body.vegan,
-        vegetarian: req.body.vegetarian,
-        glutenFree: req.body.glutenFree,
-        servings: req.body.servings,
-        cuisines: req.body.cuisines,
-        diets: req.body.diets,
-        instructions: req.body.instructions
-      }
-
-
-      await DButils.execQuery(
-  
-        `INSERT INTO recipes (user_id,title,readyInMinutes,image,popularity,vegan,vegetarian, glutenFree,ingridients,instructions,servings ) VALUES (
-          '${recipe_details.user_id}', '${recipe_details.title}', '${recipe_details.readyInMinutes}',
-        '${recipe_details.image}', '${recipe_details.popularity}', '${recipe_details.email.vegan}', '${recipe_details.vegetarian}', '${recipe_details.glutenFree}', '${recipe_details.ingridients}', '${recipe_details.instructions}', '${recipe_details.servings}')`
-  
-      );
-      res.status(201).send({ message: "recipe created", success: true });
-    } catch (error) {
-      next(error);
-    }
-  });
-
-
-
 
 
 
